// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Results renders List print mode without crashing 1`] = `
<div
  className="content_main list"
>
  <section
    className="print-info"
  >
    <button
      className="a-btn print-button"
      onClick={[Function]}
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 761.9 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
        />
        <path
          d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
        />
      </svg>
      Print
    </button>
    <p>
      <span>
        Dates:
      </span>
       
       - 
    </p>
    <div>
      <div>
        Showing 
        <span>
          1
        </span>
         out of
        <span>
           
          100
           
        </span>
         total complaints 
      </div>
    </div>
  </section>
  <section
    className="list-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div
          className="layout-row"
        >
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print-friendly page
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="layout-row refine"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
            title="Filter results"
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="cf-select"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-size"
        >
          Select the number of results to display at a time
        </label>
        <p>
          Show
        </p>
        <select
          id="choose-size"
          onChange={[Function]}
        >
          <option
            value={10}
          >
            10
             results
          </option>
          <option
            value={25}
          >
            25
             results
          </option>
          <option
            value={50}
          >
            50
             results
          </option>
          <option
            value={100}
          >
            100
             results
          </option>
        </select>
      </section>
      <section
        className="cf-select"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-sort"
        >
          Choose the order in which the results are displayed
        </label>
        <p>
          Sort
        </p>
        <select
          id="choose-sort"
          onChange={[Function]}
        >
          <option
            value="created_date_desc"
          >
            Newest to oldest
          </option>
          <option
            value="created_date_asc"
          >
            Oldest to newest
          </option>
          <option
            value="relevance_desc"
          >
            Relevance
          </option>
          <option
            value="relevance_asc"
          >
            Relevance (asc)
          </option>
        </select>
      </section>
    </div>
    <ul
      className="cards-panel"
    >
      <li
        className="card-container"
      >
        <div
          className="card"
        >
          <div
            className="card-left layout-column"
          >
            <h3
              className="to-detail"
            >
              <a
                aria-label="Complaint 1"
                href="detail/1"
              >
                1
              </a>
            </h3>
            <h4
              tabIndex="0"
            >
              Company name
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "foo",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Company response to consumer
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Closed",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Timely response?
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "yes",
                }
              }
              tabIndex="0"
            />
          </div>
          <div
            className="card-right layout-column"
          >
            <div
              className="layout-row"
            >
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Date received:
                </h4>
                <span
                  className="body-copy"
                >
                  <span>
                    2/3/2013
                  </span>
                </span>
              </div>
              <div
                className="spacer"
              />
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Consumer's state:
                </h4>
                <span
                  className="body-copy"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "DC",
                    }
                  }
                  tabIndex="0"
                />
              </div>
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Product
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Bar",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-product:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Qaz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Issue
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Foo",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-issue:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Baz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <div>
              <br />
              <h4
                tabIndex="0"
              >
                Consumer Complaint Narrative
              </h4>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Lorem Ipsum",
                  }
                }
                tabIndex="0"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
    <nav
      aria-label="Pagination"
      className="m-pagination"
      role="navigation"
    >
      <button
        className="a-btn m-pagination_btn-prev"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="a-btn_icon a-btn_icon__on-left"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.5 1090.7c-17.3 0-33.8-6.8-46-19L19 642.1c-25.4-25.4-25.4-66.5 0-91.9l429.5-429.5c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L156.9 596.2l383.6 383.6c25.4 25.4 25.4 66.5.1 91.9-12.3 12.2-28.8 19-46.1 19z"
            />
          </svg>
        </span>
        Previous
      </button>
      <button
        className="a-btn m-pagination_btn-next"
        disabled={false}
        onClick={[Function]}
      >
        Next
        <span
          className="a-btn_icon a-btn_icon__on-right"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M65.1 1090.2c-35.9 0-65-29-65.1-64.9 0-17.3 6.8-33.9 19.1-46.1l383.6-383.5L19.1 212.2c-25.1-25.6-24.8-66.8.9-92 25.3-24.8 65.8-24.8 91.1 0l429.5 429.5c25.4 25.4 25.4 66.5 0 91.9L111 1071.2c-12.1 12.2-28.7 19.1-45.9 19z"
            />
          </svg>
        </span>
      </button>
      <form
        action=""
        className="m-pagination_form"
        onSubmit={[Function]}
      >
        <label
          className="m-pagination_label"
          htmlFor="m-pagination_current-page"
        >
          Page
          <span
            className="u-visually-hidden"
          >
            number 
             out
          </span>
          <input
            className="m-pagination_current-page"
            id="m-pagination_current-page"
            inputMode="numeric"
            max={1}
            min="1"
            name="page"
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
          of 
          <span>
            1
          </span>
        </label>
        <button
          className="a-btn a-btn__link m-pagination_btn-submit"
          id="m-pagination_btn-submit"
          type="submit"
        >
          Go
        </button>
      </form>
    </nav>
  </section>
  <section
    className="print-info-footer"
  >
    <p>
      <span>
        URL:
      </span>
       
      http://localhost/
    </p>
  </section>
</div>
`;

exports[`component:Results renders Map print mode without crashing 1`] = `
<div
  className="content_main map"
>
  <section
    className="print-info"
  >
    <button
      className="a-btn print-button"
      onClick={[Function]}
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 761.9 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
        />
        <path
          d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
        />
      </svg>
      Print
    </button>
    <p>
      <span>
        Dates:
      </span>
       
       - 
    </p>
    <div>
      <div>
        Showing 
        <span>
          1
        </span>
         out of
        <span>
           
          100
           
        </span>
         total complaints 
      </div>
    </div>
  </section>
  <section
    className="map-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div
          className="layout-row"
        >
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print-friendly page
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="layout-row refine"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
            title="Filter results"
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="date-intervals m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector interval-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector interval-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector interval-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector interval-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector interval-All"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      <section
        className="per-capita"
      >
        <div
          className="per-capita m-btn-group"
        >
          <p>
            Map shading
          </p>
          <button
            className="a-btn raw deselected"
            onClick={[Function]}
          >
            Complaints
          </button>
          <button
            className="a-btn capita a-btn__disabled"
            onClick={[Function]}
          >
            Complaints per 1,000 
            <span>
              population
            </span>
          </button>
        </div>
      </section>
    </div>
    <div>
      <div
        className="cfpb-chart print"
        data-chart-type="tile_map"
        id="tile-chart-map"
      />
    </div>
    <div
      className="map-toolbar"
    >
      <section
        className="state-heading"
      >
        <span>
          United States of America
        </span>
        <span>
          
        </span>
        
      </section>
      
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Product
         by highest complaint volume
      </h3>
      <div
        id="row-chart-product"
      />
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Issue
         by highest complaint volume
      </h3>
      <div
        id="row-chart-issue"
      />
    </div>
  </section>
  <section
    className="print-info-footer"
  >
    <p>
      <span>
        URL:
      </span>
       
      http://localhost/
    </p>
  </section>
</div>
`;

exports[`component:Results renders list panel without crashing 1`] = `
<div
  className="content_main list"
>
  <section
    className="list-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div
          className="layout-row"
        >
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print-friendly page
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="layout-row refine"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
            title="Filter results"
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="cf-select"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-size"
        >
          Select the number of results to display at a time
        </label>
        <p>
          Show
        </p>
        <select
          id="choose-size"
          onChange={[Function]}
        >
          <option
            value={10}
          >
            10
             results
          </option>
          <option
            value={25}
          >
            25
             results
          </option>
          <option
            value={50}
          >
            50
             results
          </option>
          <option
            value={100}
          >
            100
             results
          </option>
        </select>
      </section>
      <section
        className="cf-select"
      >
        <label
          className="u-visually-hidden"
          htmlFor="choose-sort"
        >
          Choose the order in which the results are displayed
        </label>
        <p>
          Sort
        </p>
        <select
          id="choose-sort"
          onChange={[Function]}
        >
          <option
            value="created_date_desc"
          >
            Newest to oldest
          </option>
          <option
            value="created_date_asc"
          >
            Oldest to newest
          </option>
          <option
            value="relevance_desc"
          >
            Relevance
          </option>
          <option
            value="relevance_asc"
          >
            Relevance (asc)
          </option>
        </select>
      </section>
    </div>
    <ul
      className="cards-panel"
    >
      <li
        className="card-container"
      >
        <div
          className="card"
        >
          <div
            className="card-left layout-column"
          >
            <h3
              className="to-detail"
            >
              <a
                aria-label="Complaint 1"
                href="detail/1"
              >
                1
              </a>
            </h3>
            <h4
              tabIndex="0"
            >
              Company name
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "foo",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Company response to consumer
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Closed",
                }
              }
              tabIndex="0"
            />
            <br />
            <h4
              tabIndex="0"
            >
              Timely response?
            </h4>
            <span
              className="body-copy"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "yes",
                }
              }
              tabIndex="0"
            />
          </div>
          <div
            className="card-right layout-column"
          >
            <div
              className="layout-row"
            >
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Date received:
                </h4>
                <span
                  className="body-copy"
                >
                  <span>
                    2/3/2013
                  </span>
                </span>
              </div>
              <div
                className="spacer"
              />
              <div
                className="layout-row"
              >
                <h4
                  tabIndex="0"
                >
                  Consumer's state:
                </h4>
                <span
                  className="body-copy"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "DC",
                    }
                  }
                  tabIndex="0"
                />
              </div>
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Product
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Bar",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-product:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Qaz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <br />
            <h4
              tabIndex="0"
            >
              Issue
            </h4>
            <h3
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Foo",
                }
              }
              tabIndex="0"
            />
            <div
              className="layout-row"
            >
              <span
                className="body-copy subitem"
                tabIndex="0"
              >
                Sub-issue:
              </span>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Baz",
                  }
                }
                tabIndex="0"
              />
            </div>
            <div>
              <br />
              <h4
                tabIndex="0"
              >
                Consumer Complaint Narrative
              </h4>
              <span
                className="body-copy"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Lorem Ipsum",
                  }
                }
                tabIndex="0"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
    <nav
      aria-label="Pagination"
      className="m-pagination"
      role="navigation"
    >
      <button
        className="a-btn m-pagination_btn-prev"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="a-btn_icon a-btn_icon__on-left"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.5 1090.7c-17.3 0-33.8-6.8-46-19L19 642.1c-25.4-25.4-25.4-66.5 0-91.9l429.5-429.5c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L156.9 596.2l383.6 383.6c25.4 25.4 25.4 66.5.1 91.9-12.3 12.2-28.8 19-46.1 19z"
            />
          </svg>
        </span>
        Previous
      </button>
      <button
        className="a-btn m-pagination_btn-next"
        disabled={false}
        onClick={[Function]}
      >
        Next
        <span
          className="a-btn_icon a-btn_icon__on-right"
        >
          <svg
            className="cf-icon-svg"
            viewBox="0 0 559.6 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M65.1 1090.2c-35.9 0-65-29-65.1-64.9 0-17.3 6.8-33.9 19.1-46.1l383.6-383.5L19.1 212.2c-25.1-25.6-24.8-66.8.9-92 25.3-24.8 65.8-24.8 91.1 0l429.5 429.5c25.4 25.4 25.4 66.5 0 91.9L111 1071.2c-12.1 12.2-28.7 19.1-45.9 19z"
            />
          </svg>
        </span>
      </button>
      <form
        action=""
        className="m-pagination_form"
        onSubmit={[Function]}
      >
        <label
          className="m-pagination_label"
          htmlFor="m-pagination_current-page"
        >
          Page
          <span
            className="u-visually-hidden"
          >
            number 
             out
          </span>
          <input
            className="m-pagination_current-page"
            id="m-pagination_current-page"
            inputMode="numeric"
            max={1}
            min="1"
            name="page"
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
          of 
          <span>
            1
          </span>
        </label>
        <button
          className="a-btn a-btn__link m-pagination_btn-submit"
          id="m-pagination_btn-submit"
          type="submit"
        >
          Go
        </button>
      </form>
    </nav>
  </section>
</div>
`;

exports[`component:Results renders map panel without crashing 1`] = `
<div
  className="content_main map"
>
  <section
    className="map-panel"
  >
    <div>
      <summary
        className="action-bar"
        id="search-summary"
      >
        <div>
          <h2>
            Showing 
            <span>
              1
            </span>
             matches out of 
            <span>
              100
            </span>
             total complaints
          </h2>
        </div>
        <div
          className="layout-row"
        >
          <h3
            className="h4 flex-all export-results"
          >
            <button
              className="a-btn a-btn__link"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              Export data
            </button>
            <button
              className="a-btn a-btn__link print-preview"
              data-gtm_ignore="true"
              onClick={[Function]}
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 761.9 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M203.7 889.9h355v50h-355zM203.7 788.4h355v50h-355z"
                />
                <path
                  d="M670.9 368.4L477.3 174.8H122.1c-16.5 0-30 13.5-30 30V500H70c-38.5 0-70 31.5-70 70v305.5c0 38.5 31.5 70 70 70h22.1v60.5c0 16.5 13.5 30 30 30h518.8c16.5 0 30-13.5 30-30v-60.5h21c38.5 0 70-31.5 70-70V569.9c0-38.5-31.5-70-70-70h-21V368.4zm-60 607.6H152.1V742.7h458.8V976zM425 234.8v146.4c0 21.1 17.3 38.4 38.4 38.4h147.5V500H152.1V234.8H425zm237.9 403.9c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z"
                />
              </svg>
              Print-friendly page
            </button>
          </h3>
        </div>
      </summary>
    </div>
    <div
      className="layout-row refine"
    >
      <section
        className="filter-panel-toggle"
      >
        <div
          className="m-btn-group"
        >
          <p>
             
          </p>
          <button
            className="a-btn"
            onClick={[Function]}
            title="Filter results"
          >
            Filter results
          </button>
        </div>
      </section>
      <span
        className="separator"
      />
      <section
        className="date-intervals m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector interval-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector interval-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector interval-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector interval-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector interval-All"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      <section
        className="per-capita"
      >
        <div
          className="per-capita m-btn-group"
        >
          <p>
            Map shading
          </p>
          <button
            className="a-btn raw deselected"
            onClick={[Function]}
          >
            Complaints
          </button>
          <button
            className="a-btn capita a-btn__disabled"
            onClick={[Function]}
          >
            Complaints per 1,000 
            <span>
              population
            </span>
          </button>
        </div>
      </section>
    </div>
    <div>
      <div
        className="cfpb-chart "
        data-chart-type="tile_map"
        id="tile-chart-map"
      />
    </div>
    <div
      className="map-toolbar"
    >
      <section
        className="state-heading"
      >
        <span>
          United States of America
        </span>
        <span>
          
        </span>
        
      </section>
      
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Product
         by highest complaint volume
      </h3>
      <div
        id="row-chart-product"
      />
    </div>
    <div
      className="row-chart-section"
    >
      <h3>
        Issue
         by highest complaint volume
      </h3>
      <div
        id="row-chart-issue"
      />
    </div>
  </section>
</div>
`;
